# LearningMan

./: .gitignore  README.md
Apps/MapCreator/: CMakeLists.txt  define.hpp  main.cpp
LearningMan/: CMakeLists.txt  define.hpp  main.cpp  trainEnvironment.cpp
LearningMan/GUI/: Button.cpp  Button.hpp  Container.cpp  Container.hpp  EndLevelView.cpp  EndLevelView.h  UserConfiguration.cpp  UserConfiguration.hpp
LearningMan/Map/: Collide.cpp  Collide.h  Map.cpp  Map.h  MapEnvironnement.cpp  MapEnvironnement.h  MapModel.cpp  MapModel.hpp
LearningMan/characters/: BossCharacter.cpp  BossCharacter.h  Character.cpp  Character.hpp  Golem.cpp  Golem.hpp  Healer.cpp  Healer.h  Heros.cpp  Heros.hpp  Shotgunner.cpp  Shotgunner.hpp
LearningMan/controllers/: BossController.cpp  BossController.h  Controller.cpp  Controller.hpp  IAController.cpp  IAController.hpp  PlayerController.cpp  PlayerController.hpp  PredefineController.cpp  PredefineController.hpp
LearningMan/learningAlgorithms/: BossEnvironment.cpp  BossEnvironment.h  Environment.cpp  Environment.h  QLearning.cpp  QLearning.hpp  trainEnvironment.cpp  trainEnvironment.h  trainEnvironnement.cpp
LearningMan/lib/: jsoncpp.cpp
LearningMan/ressources/: Level 1.json  basic.json  endMap.json  map.json.json  map1.json  test.json  test2.json  walls.json
LearningMan/utils/: BulletManager.cpp  BulletManager.hpp  CollisionManager.cpp  CollisionManager.hpp  HitboxManager.cpp  HitboxManager.hpp  Portal.cpp  Portal.hpp  RecordInputs.cpp  RecordInputs.h  SoundPlayer.cpp  SoundPlayer.hpp  TextureManager.cpp  TextureManager.hpp  (+2 more)
(+48 files in other folders)
